infomatica.jpg fixed

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -4,3 +4,4 @@ FROM nginx:alpine
 
 COPY ./index.html /usr/share/nginx/html/index.html
 COPY ./style.css /usr/share/nginx/html/style.css
+COPY ./imagenes/informatica.jpg /usr/share/nginx/html/imagenes/informatica.jpg
